--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <br><br>
                             <i> Methodology: Customer journey map, Sketches, Analysing customer feedback, Wireframes </i>
                         </p>
-                        <a href="https://play.google.com/store/apps/details?id=com.anyfin.app" target="_blank">View App on Play Store</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.anyfin.app" target="_blank">View app on Play Store</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -92,7 +92,7 @@
                             <i> Methodology: Critical object interviews, Personas, Instrumental Interaction, Generative walkthrough</i>
                         </p>
                         
-                        <a href="https://youtu.be/DGnubiIi9PU" target="_blank">View Video on Youtube</a>
+                        <a href="https://youtu.be/DGnubiIi9PU" target="_blank">View video on Youtube</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -215,7 +215,7 @@
     <div id="contact">
         <h2 style="color: rgb(32,90,90);">LET'S GET IN TOUCH</h2> <br>
 
-        <a href="https://github.com/ranjini1992/ranjini1992.github.io/ranjini_aravind_cv.pdf" target="_blank">
+        <a href="https://ranjini1992.github.io/ranjini_aravind_cv.pdf" target="_blank">
             <i class="fa fa-2x fa-file"></i>  <h5> CV </h5>
         </a><br> <br>
 
