radial chart skills

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <script src="http://d3js.org/d3.v3.min.js"></script>
+    <script src="js/RadarChart.js"></script>
+
 </head>
 
 <body>
@@ -29,6 +32,9 @@
             </li>
             <li>
                 <a href="#experience">EXPERIENCE</a>
+            </li>
+            <li>
+                <a href="#skills">SKILLS</a>
             </li>
             <li>
                 <a href="#contact">CONTACT</a>
@@ -211,9 +217,15 @@
         <!-- End .education-block -->
     </div>
     <!-- End #education -->
+     <div id="skills">
+        <div id="chart" style="text-align: center">
+            <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300;">SKILLS</h2>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/script.js"></script>
 
     <div id="contact">
-        <h2 style="color: rgb(32,90,90);">LET'S GET IN TOUCH</h2> <br>
+        <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300">LET'S GET IN TOUCH</h2> <br>
 
         <a href="https://ranjini1992.github.io/ranjini_aravind_cv.pdf" target="_blank">
             <i class="fa fa-2x fa-file"></i>  <h5> CV </h5>
