--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
              <div class="col-md-6">
                 <img src="images/profile.jpeg" />
             </div>
-            <div class="col-md-6">
-                <h3 style="text-align: left">User Experience Designer</h3>
-                <p style="text-align: left">
+            <div class="col-md-6" style="text-align: left">
+                <h3>User Experience Designer</h3>
+                <p>
                 Living in Paris and studying Human Computer Interaction and Design.<br><br>
                 <a href="#projects">Selected Work 2018 - 2019</a><br><br>
                 
