--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <img src="images/profile.jpeg" />
             </div>
             <div class="col-md-6" style="text-align: left">
-                <h3>User Experience Designer</h3>
+                <h3><span class="text_1">USER EXPERIENCE DESIGNER</span><span class="text_2">PROGRAMMER</span></h3>
+                
                 <p>
                 Living in Paris and studying Human Computer Interaction and Design.<br><br>
                 <a href="#projects">Selected Work 2018 - 2019</a><br><br>
@@ -223,7 +224,7 @@
             <h4>Bachelor of Engineering in Computer Engineering</h4>
         </div>
         <!-- End .education-block -->
-        <a href="https://ranjini1992.github.io/ranjini_aravind_cv.pdf" target="_blank">
+        <a href="https://ranjiniaravind.com/ranjini_aravind_cv.pdf" target="_blank">
                 Curriculum Vitae
                 </a><br> <br>
     </div>
@@ -238,8 +239,8 @@
     <div id="contact">
         <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300">SAY HI.</h2> <br>
 
-        <a href="mailto:ranjini1992@gmail.com" target="_blank">
-            <h3> ranjini1992@gmail.com</h3>
+        <a href="mailto:ranjini.aravind@icloud.com" target="_blank">
+            <h3>ranjini.aravind@icloud.com</h3>
         </a>
 
        
