remove radar chart

--- a/index.html
+++ b/index.html
@@ -229,12 +229,18 @@
                 </a><br> <br>
     </div>
     <!-- End #education -->
-     <div id="skills">
-        <div id="chart" style="text-align: center">
+    <div id="skills">
+        <div style="text-align: center">
             <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300;">SKILLS</h2>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Data Visualization</button>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Programming</button>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Wireframing</button>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">User Research</button>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Video Editing</button>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Usability Testing</button>
+            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Prototyping</button>
         </div>
     </div>
-    <script type="text/javascript" src="js/script.js"></script>
 
     <div id="contact">
         <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300">SAY HI.</h2> <br>
