--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
+                        <img src="images/fitness.png" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Micro Visualizations on Fitness Trackers</h3>
+                        <p>
+                            <b> How do users of fitness tracker perceive visualizations on their tracker?</b><br>
+                            Interviews and an online questionnaire with regular users of fitness trackers.
+                            <br><br>
+                            <i> Methodology: User interviews, Card sorting exercise, Online questionnaire </i>
+                        </p>
+                        <a href="https://osf.io/f3vja/?view_only=d019fad84b894c8cbc4077eca4560183" target="_blank">View the project on Open Science Foundation</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
                         <img src="images/anyfin.png" />
                     </div>
                     <!-- End .project-image -->
