--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     <div class="project-info">
                         <h3>Micro Visualizations on Fitness Trackers</h3>
                         <p>
-                            <b> How do users of fitness tracker perceive visualizations on their tracker?</b><br>
-                            Interviews and an online questionnaire with regular users of fitness trackers.
+                            <b> How do wearers of fitness trackers perceive visualizations on their tracker?</b><br>
+                            Presented a poster at EuroVis 2019 conference about research findings from a survey on sleep data visualizations.
                             <br><br>
-                            <i> Methodology: User interviews, Card sorting exercise, Online questionnaire </i>
+                            <i> Methodology: User interviews, Card sorting exercise, Online questionnaires </i>
                         </p>
                         <a href="https://osf.io/f3vja/?view_only=d019fad84b894c8cbc4077eca4560183" target="_blank">View the project on Open Science Foundation</a>
                     </div>
@@ -294,7 +294,7 @@
                             <a href="https://github.com/ranjini1992" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://linkedin.com/ranjinia" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://linkedin.com/in/ranjinia" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
