--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h3>Micro Visualizations on Fitness Trackers</h3>
                         <p>
                             <b> How do wearers of fitness trackers perceive visualizations on their tracker?</b><br>
-                            Presented a poster at EuroVis 2019 conference about research findings from a survey on sleep data visualizations.
+                            Poster at EuroVis 2019 conference about sleep visualizations and preferences.
                             <br><br>
                             <i> Methodology: User interviews, Card sorting exercise, Online questionnaires </i>
                         </p>
