--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             <br><br>
                             <i> Methodology: User interviews, Card sorting exercise, Online questionnaires </i>
                         </p>
-                        <a href="https://osf.io/f3vja/?view_only=d019fad84b894c8cbc4077eca4560183" target="_blank">View the project on Open Science Foundation</a>
+                        <a href="fitnessvis.html">Read more</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
