--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <br><br>
                             <i> Methodology: Customer journey map, Sketches, Analysing customer feedback, Wireframes </i>
                         </p>
-                        <a href="https://play.google.com/store/apps/details?id=com.anyfin.app" target="_blank">View app on Play Store</a>
+                         <a href="anyfinapp.html">Read more</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
