--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <i> Methodology: Critical object interviews, Personas, Instrumental Interaction</i>
                         </p>
                         
-                        <a href="https://youtu.be/DGnubiIi9PU" target="_blank">View video on Youtube</a>
+                        <a href="redesignmaps.html">Read more</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
