--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="project shadow-large">
+		<a href="fitnessvis.html" style="display: block; height: 100% width: 100%; text-decoration:none;">
                     <div class="project-image">
                         <img src="images/fitness.png" />
                     </div>
@@ -85,11 +86,13 @@
                         <a href="fitnessvis.html">Read more</a>
                     </div>
                     <!-- End .project-info -->
+		    </a>
                 </div>
                 <!-- End .project -->
 
 
                 <div class="project shadow-large">
+		    <a href="anyfinapp.html" style="display: block; height: 100% width: 100%; text-decoration:none;">
                     <div class="project-image">
                         <img src="images/anyfin.png" />
                     </div>
@@ -105,10 +108,12 @@
                          <a href="anyfinapp.html">Read more</a>
                     </div>
                     <!-- End .project-info -->
+		    </a>
                 </div>
                 <!-- End .project -->
 
                 <div class="project shadow-large">
+		    <a href="redesignmaps.html" style="display: block; height: 100% width: 100%; text-decoration:none;">
                     <div class="project-image">
                         <img src="images/rundezvous.png" />
                     </div>
@@ -125,6 +130,7 @@
                         <a href="redesignmaps.html">Read more</a>
                     </div>
                     <!-- End .project-info -->
+		    </a>
                 </div>
                 <!-- End .project -->
 
