--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <h3>Micro Visualizations on Fitness Trackers</h3>
                         <p>
                             <b> How do wearers of fitness trackers perceive visualizations on their tracker?</b><br>
-                            Poster at EuroVis 2019 conference about sleep visualizations and preferences.
+                            Interviews and questionnaires with regular wearers of fitness trackers, followed by a controlled experiment on sleep visualizations on a smartwatch.
                             <br><br>
                             <i> Methodology: User interviews, Card sorting exercise, Online questionnaires </i>
                         </p>
@@ -218,12 +218,12 @@
         <div id="experience-timeline">
             <div data-date="February 2019 – July 2019">
                 <h3>Inria, France</h3>
-                <h4>Data Visualization Research Intern</h4>
+                <h4>UX Research Intern</h4>
             </div>
 
             <div data-date="March 2018 – July 2018">
                 <h3>Anyfin, Stockholm</h3>
-                <h4>UX Growth Intern</h4>
+                <h4>UX Design Intern</h4>
 
             </div>
 
@@ -257,13 +257,11 @@
     <div id="skills">
         <div style="text-align: center">
             <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300;">SKILLS</h2>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Data Visualization</button>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Programming</button>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Wireframing</button>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">User Research</button>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Video Editing</button>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Usability Testing</button>
-            <button type="button" style="background-image: linear-gradient(to right, rgb(181, 229, 255) , rgb(179, 206, 255));border-radius: 15px;padding: 1opx">Prototyping</button>
+            <button class="btn_one" >Data Visualization</button>
+            <button class="btn_one" >Programming</button>
+            <button class="btn_one" >Wireframing</button><br>
+            <button class="btn_one" >User Research</button>
+            <button class="btn_one" >Usability Testing</button>
         </div>
     </div>
 
