--- a/index.html
+++ b/index.html
@@ -263,6 +263,15 @@
             <button class="btn_one" >User Research</button>
             <button class="btn_one" >Usability Testing</button>
         </div>
+	<div class ="row">
+            <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300;">MY PROCESS</h2>
+               <p style ="padding-left:15em; padding-right:15em" > <ul style ="text-align: left;">
+                <li><b> Understand </b>: Talk to regular existing users or potential users to understand their needs and pain points. Research and take inspiration from similar products created by other companies in a similar field. </li>
+                <li> <b> Define </b>: Create a customer journey map for these users from the discovery stage (when they find out about the product) all the way until they become a customer and beyond. opportunities. Identify their pain points and our goals in each stage to see the difference and spot. If there are different patterns of user needs or behaviour, then create personas and distinguish primary personas from secondary personas.  </li>
+                <li><b> Ideate </b>: Brainstorm individually or with other stakeholders on how the touch points (the way we interact with users - website/email/notification) can be improved. Create low-fi sketches on paper, get feedback, and iterate. Then, create wireframes with Sketch and clickable prototype with inVision. Present, get feedback and polish.</li>
+                <li> <b> Visual Design </b>: Choose a style of interface and the basic layout like Material design. Create a flow of the product from start to finish, talk to users/clients, brainstorm, iterate. Ask for feedback and preference from other stakeholders. Consult and collaborate with the product and development team to see their current infrastructure and preferences. </li>
+               </ul></p>
+        </div>
     </div>
 
     <div id="contact">
