--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <p style="font-size: 36px; color: rgb(32,90,90);">RANJINI ARAVIND</p>
+            <p id="title">RANJINI ARAVIND</p>
              <div class="col-md-6">
                 <img src="images/profile.jpeg" />
             </div>
