--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h3><span class="text_1">USER EXPERIENCE DESIGNER</span><span class="text_2">PROGRAMMER</span></h3>
                 
                 <p>
-                Living in Paris and studying Human Computer Interaction and Design.<br><br>
+                I enjoy observing how people perceive and interact with technology so that I can create a better experience for them.<br><br>
                 <a href="#projects">Selected Work 2018 - 2019</a><br><br>
                 
                  </p>
@@ -79,9 +79,9 @@
                         <h3>Micro Visualizations on Fitness Trackers</h3>
                         <p>
                             <b> How do wearers of fitness trackers perceive visualizations on their tracker?</b><br>
-                            Interviews and questionnaires with regular wearers of fitness trackers, followed by a controlled experiment on sleep visualizations on a smartwatch.
+                            Analysed sleep visualizations in different sizes and temporal granularities.
                             <br><br>
-                            <i> Methodology: User interviews, Card sorting exercise, Online questionnaires </i>
+                            <i> Methodology: User interviews, Card sorting exercise, Perceptual Experiment </i>
                         </p>
                         <a href="fitnessvis.html">Read more</a>
                     </div>
@@ -100,7 +100,7 @@
                     <div class="project-info">
                         <h3>Anyfin Mobile Application</h3>
                         <p>
-                            <b> How can we enable more customers to take charge of their own finances?</b><br>
+                            <b> How can we enable customers to track their finances regularly?</b><br>
                             Mobile app wireframes for customers to track their credit status, upcoming payments, past activity and profile settings.
                             <br><br>
                             <i> Methodology: Customer journey map, Sketches, Analysing customer feedback, Wireframes </i>
@@ -121,7 +121,7 @@
                     <div class="project-info">
                         <h3>Design Bootcamp - Rundezvous</h3>
                         <p>
-                            <b> How can we improve Google Maps?</b><br>
+                            <b> How can we improve interaction on Google Maps?</b><br>
                             A video prototype of a maps application which allows runners to plan routes with free hand drawing, marking menus and provides haptic feedback while running.
                             <br><br>
                             <i> Methodology: Critical object interviews, Personas, Instrumental Interaction</i>
