--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 
                 <p>
                 I enjoy observing how people perceive and interact with technology so that I can create a better experience for them.<br><br>
-                <a href="#projects">Selected Work 2018 - 2019</a><br><br>
+                &ensp;<a href="https://medium.com/@ranjini_aravind" target="_blank"><i class="fa fa-2x fa-medium" aria-hidden="true"></i></a>  &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
+                <a href="https://linkedin.com/in/ranjinia" target="_blank"><i class="fa fa-2x fa-linkedin" aria-hidden="true"></i></a><br><br>
                 
                  </p>
              </div>
