--- a/fitnessvis.html
+++ b/fitnessvis.html
@@ -23,7 +23,7 @@
         <div id="lead-content">
             <p style="font-size: 36px; color: rgb(32,90,90);">Microvisualizations on Fitness Trackers</p>
              <div class="col-md-6">
-                <img src="images/fitness.png" />
+                <img src="images/fitness.png" style="height: 200px"/>
             </div>
             <div class="col-md-6" style="text-align: left">
                 <h3>Visualization Research Intern</h3>
