--- a/anyfinapp.html
+++ b/anyfinapp.html
@@ -22,7 +22,7 @@
         <div id="lead-content">
             <p style="font-size: 36px; color: rgb(32,90,90);">UX Design of a Mobile App</p>
              <div class="col-md-7">
-                <img src="images/anyfin.png" />
+                <img src="images/anyfin.png" style="height: 200px"/>
             </div>
             <div class="col-md-5" style="text-align: left">
                 <h3>Growth Intern</h3>
