--- a/redesignmaps.html
+++ b/redesignmaps.html
@@ -22,7 +22,7 @@
         <div id="lead-content">
             <p style="font-size: 36px; color: rgb(32,90,90);">Redesign of a Maps Application</p>
              <div class="col-md-7">
-                <img src="images/rundezvous.png" />
+                <img src="images/rundezvous.png" style="height: 200px" />
             </div>
             <div class="col-md-5" style="text-align: left">
                 <h3>Design Bootcamp</h3>
