--- a/index.html
+++ b/index.html
@@ -197,15 +197,15 @@
         <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300;">MY PROCESS</h2>
                
         <div class="row">
-          <div class="column">
+          <div class="col-sm-4 pad-all">
             <h2>Understand</h2>
             <p>Talk to regular existing users or potential users to understand their needs and pain points. Research and take inspiration from similar products created by other companies in a similar field.</p>
           </div>
-          <div class="column">
+          <div class="col-sm-4 pad-all">
             <h2>Define</h2>
             <p>Create a customer journey map for these users. Identify their pain points in each stage. If there are different patterns of user needs or behaviour, then create primary and secondary personas.</p>
           </div>
-          <div class="column">
+          <div class="col-sm-4 pad-all">
             <h2>Ideate</h2>
             <p>Brainstorm on how the touch points can be improved. Create low-fi sketches on paper, get feedback, and iterate. Then, create wireframes with Sketch and inVision. Present and get feedback.</p>
           </div>
@@ -236,8 +236,8 @@
     <div id="contact">
         <h2 style="color: rgb(32,90,90);font-size:2em;font-weight:300">GET IN TOUCH</h2> <br>
 
-        <a href="mailto:ranjini.aravind@icloud.com" target="_blank">
-            <h3>ranjini.aravind@icloud.com</h3>
+        <a href="mailto:ranjini1992@gmail.com" target="_blank">
+            <h3>ranjini1992@gmail.com</h3>
         </a>
 
        
