--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="lead-content">
             <p id="title">RANJINI ARAVIND</p>
              <div class="col-md-6">
-                <img src="images/profile.jpeg" />
+                <img src="images/profile.jpeg" style="height: 200px"/>
             </div>
             <div class="col-md-6" style="text-align: left">
                 <h3><span class="text_1">USER EXPERIENCE DESIGNER</span><span class="text_2">PROGRAMMER</span></h3>
