--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <p id="title">RANJINI ARAVIND</p>
+            <p id="title">HI <img src="images/waving-hand-sign.png" width="40px"> I'M RANJINI</p>
              <div class="col-md-6">
                 <img src="images/profile.jpeg" style="height: 200px"/>
             </div>
@@ -53,8 +53,8 @@
                 
                 <p>
                 I enjoy observing how people perceive and interact with technology so that I can create a better experience for them.<br><br>
-                &ensp;<a href="https://medium.com/@ranjini_aravind" target="_blank"><i class="fa fa-2x fa-medium" aria-hidden="true"></i></a>  &ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-                <a href="https://linkedin.com/in/ranjinia" target="_blank"><i class="fa fa-2x fa-linkedin" aria-hidden="true"></i></a><br><br> 
+                <a href="https://medium.com/@ranjini_aravind" target="_blank"><i class="fa fa-medium" aria-hidden="true"></i></a>  &ensp;&ensp;
+                <a href="https://linkedin.com/in/ranjinia" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a><br><br> 
                 
                  </p>
              </div>
