--- a/anyfinapp.html
+++ b/anyfinapp.html
@@ -15,10 +15,18 @@
 
 </head>
 <body>
-    <div style="text-align:right; padding-top: 35px; padding-right: 5em">
-                <b><a href="https://ranjiniaravind.com">HOME</a></b>
-    </div>
-    <div id="lead">
+    
+     <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="https://ranjiniaravind.com">HOME</a>
+            </li>
+        </ul>
+    </header>
+    <div id="lead" style="padding-top: 100px;">
         <div id="lead-content">
             <p style="font-size: 36px; color: rgb(32,90,90);">UX Design of a Mobile App</p>
              <div class="col-md-7">
