--- a/fitnessvis.html
+++ b/fitnessvis.html
@@ -15,11 +15,18 @@
 
 </head>
 <body>
-    <div style="text-align:right; padding-top: 35px; padding-right: 5em">
-                <b><a href="https://ranjiniaravind.com">HOME</a></b>
-    </div>
+     <header>
+        <div id="mobile-menu-close">
+            <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <ul id="menu" class="shadow">
+            <li>
+                <a href="https://ranjiniaravind.com">HOME</a>
+            </li>
+        </ul>
+    </header>
 
-    <div style="text-align:center">
+    <div style="text-align:center; padding-top: 100px;">
         <p style="font-size: 36px;">Fitness Tracker Visualizations</p><hr>
         <div class="row">
              <div class="col-md-2"></div>
