--- a/anyfinapp.html
+++ b/anyfinapp.html
@@ -44,10 +44,10 @@
         <!-- End #lead-content -->
     </div>
 
-
-    <div id="projects" class="background-alt">
+    <div class="pad-all">
+    <div id="projects">
         <h2 class="heading" style="color: rgb(32,90,90);">AIM</h2>
-        <div style="text-align:center; padding-left: 3em; padding-right: 3em">
+        <div style="text-align:center;">
             <p>Anyfin is a fin-tech startup which enables its customers to refinance their existing loans from other creditors to a new loan with a lower interest rate. My aims during the internship were to </p>
 
             <ul>
@@ -57,9 +57,9 @@
         </div>
     </div>
 
-     <div id="experience" class="background-alt">
+     <div id="experience">
         <h2 class="heading" style="color: rgb(32,90,90);">CUSTOMER JOURNEY MAP</h2>
-        <div style="text-align:left; padding-left: 3em; padding-right: 3em">
+        <div style="text-align:left;">
             <p>I identified the following stages in the journey of any potential customer. For each stage, I listed the customer’s goals, the company’s goals, how the customer thinks and feels in that stage and possible opportunities to overcome their pain points.</p>
          <ul>
             <li>   Pre-Discovery (customers are paying loans to a different creditor at a higher interest rate)</li>
@@ -78,18 +78,18 @@
         </div>
     </div>
 
-     <div id="skills" class="background-alt">
+     <div id="skills">
         <h2 class="heading" style="color: rgb(32,90,90);">BRAINSTORMING IDEAS</h2>
-        <div style="text-align:left; padding-left: 3em; padding-right: 3em">
+        <div style="text-align:left">
             <p> I created several prototypes to brainstorm how to help the potential customers visualize how they might benefit from refinancing and help the existing customers how their loan is being paid off each month. In the case of loan payments, it is essential to understand how much is being contributed to the principal (amortization) and how much is contributed to the interest payment. This would enable customers to plan their next payments and be financially empowered.</p>
         </div>
         <img src="images/brainstorming_1.png" width="40%" />
         <img src="images/brainstorming_2.png" width="40%" />
     </div>
 
-     <div id="contact" class="background-alt">
+     <div id="contact">
         <h2 class="heading" style="color: rgb(32,90,90);">MOBILE APP WIREFRAMES</h2>
-        <div style="text-align:left; padding-left: 3em; padding-right: 3em">
+        <div style="text-align:left">
             <p>
                 Based on comments from existing customers in interviews and feedback from other stakeholders (development team and CTO), I came up with wireframes and flow for the mobile app along with the Growth lead. Here are a few of the screens which were later passed on to the designer for the hi-fi prototypes.
             </p>
@@ -104,6 +104,7 @@
            
                
         </div>
+    </div>
     </div>
 
 
